# lspxnuts-proxyserver

./: Dockerfile  README.md  app.py  config.json  config.py  entrypoint.py  mapping_did_appid.json  pyproject.toml  requirements.txt  setup.py
aorta/: aorta.addressing_client.py  aorta_addressing_client.py  aorta_authorization_client.py  aorta_notification_transformer.py  aorta_resource_client.py
deployment/: README.md  docker-compose.yaml  nginx.conf
docs/: 1. onboarding.puml  2. notificatie_bgz-sender-nuts_naar_bgz-receiver-aorta.puml  3. pull_van_bgz-receiver-aorta_naar_bgz-sender-nuts.puml
lspxnuts.egg-info/: PKG-INFO  SOURCES.txt
nuts/: nuts_vcr_client.py
postman-collection/: 00 LSPxNuts Flask.postman_collection.json
resources/: access_token.py  admin.py  aorta_access_token.py  fhir.py  hello.py  notify.py  request_access_token.py
src/: .htaccess  index.html  index.py  simple_server.py
