[tool.poetry]
name = "lspxnuts-proxyserver"
version = "0.1.0"
description = "The Proxy-server exposes itself as a public API that can be used by Nuts-network-participants and AORTA-network-participants."
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
flask = "^2.3.2"
flask-restful = "^0.3.10"
pyjwt = "^2.7.0"
cryptography = "^41.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
